# lt_investments

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL_SPECIFICATION.md  main.py  pyproject.toml  requirements.txt  test_alerts.py
config/: settings.yaml  tickers.yaml
src/alerts/: alert_generator.py  test_alert.py
src/backtesting/: engine.py
src/data/: api_client.py  data_manager.py
src/models/: allocator.py  reversion_scorer.py  scorer.py
src/utils/: config.py  helpers.py
tests/: test_alpha_vantage_api.py  test_config.py  test_data_manager.py  test_scorer.py
